src/scss/modules/_home.scss
@import "./colors";
//importing the border radius animation
@import "../mixins/shadowAnimation";
//importing the projects present in the same folder
@import "./projects";
.home {
  width: 100%;
  color: $color-purple;
  background-position: center;
  background-attachment: fixed;
}
.gradient-hr {
  height: 2px;
  width: 100%;
  margin-top: 6rem;
}
.home-header {
  width: 100%;
  height: 100vh;
  padding-top: 1.5rem;
}

.home-message {
  max-width: 58rem;
  width: 70%;
  margin: 5.6rem auto;
  h1 {
    font-size: 3rem;
    color: $color-white;
    font-weight: 400;
    text-align: center;
    letter-spacing: 0.2rem;
  }

  h3 {
    margin-top: 2rem;
    font-size: 4rem;
    text-align: center;

    -webkit-background-clip: text;
    color: transparent;
    text-transform: capitalize;
  }
  p {
    margin-top: 1.7rem;
    text-align: center;
    color: $color-white;
    font-size: 2rem;
    text-transform: capitalize;
  }
  div.button-container {
    margin-top: 4rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
  .to-bottom {
    display: block;
    margin: 4rem auto;
    width: 7rem;
    background-color: transparent;
    border: none;
    text-align: center;
    font-size: 5rem;
    color: $color-white;
    svg {
      color: $color-white;
      cursor: pointer;
      transition: all 0.5s;
      &:hover {
        color: $color-orange;
      }
    }
  }
}
//scss common for all sections
.intro-section,
.services-section,
.projects-section,
.contact-section {
  min-height: 100vh;
  width: 100%;
  background-color: $color-black-light;
}

//the intro section inside the home section
.intro-section {
  background-color: $color-black-light;
  padding-top: 10rem;
  //the profile image
  .circle-image {
    height: 20rem;
    width: 20rem;
    border-radius: 50%;
    overflow: hidden;
    @include setColorAnimation;
    cursor: pointer;

    img {
      width: 100%;
      height: 100%;
    }
  }
  //the about me paragraph
  .about-me {
    padding-left: 1rem;
    h1 {
      color: $color-grey-light;
      font-size: 5rem;
      span {
        transform: rotate(-45deg);
      }
    }
    p {
      color: $color-white;
      font-size: 1.7rem;
    }
  }
}
/*****************************************The services section**************************/
.services-section {
  padding-top: 6rem;
  h1 {
    text-align: center;
    color: $color-grey-light;
    letter-spacing: 0.1rem;
    text-transform: uppercase;
    font-size: 2.5rem;
  }
  p {
    text-align: center;
    color: $color-white;
    font-size: 1.7rem;
  }
  .service-col {
    width: 100%;
    height: 30rem;
    h1 {
      font-size: 6rem;
      text-align: justify;
    }
    h2 {
      margin-top: 1.5rem;
      margin-bottom: 1.5rem;
      font-size: 2.4rem;
      -webkit-background-clip: text;
      color: transparent;
    }
    p {
      font-size: 1.5rem;
      text-align: justify;
      overflow-wrap: break-word;
      width: 90%;
    }
  }
  .services-grid {
    width: 85%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    column-gap: 1.5rem;
  }
}
/*********************** The Projects section ******************************/
.projects-section {
  padding-top: 10rem;
  h1 {
    text-align: center;
    color: $color-grey-light;
    letter-spacing: 0.1rem;
    text-transform: uppercase;
    font-size: 2.5rem;
  }
  p {
    text-align: center;
    color: $color-white;
    font-size: 1.7rem;
  }
}

/*****************************************The Contact section**************************/
.contact-section {
  padding-top: 7rem;
  h1 {
    margin-top: 12rem;
    text-align: center;
    font-size: 3rem;
    color: $color-grey-light;
  }
  p {
    margin-top: 2.5rem;
    text-align: center;
    color: $color-white;
    font-size: 1.5rem;
  }
  .social-links {
    width: 80%;
    margin: 10rem auto;
    display: flex;
    justify-content: space-between;
    a {
      text-decoration: none;
      color: $color-blue;
      transition: color 0.5s;
      font-size: 1.5rem;
      span {
        padding-right: 0.5rem;
        vertical-align: middle;
      }
      &:hover {
        color: $color-brown;
      }
    }
  }
}

/********************The main Footer ***********************************/
.main-footer {
  padding-top: 0rem;
  min-height: 20rem;
  width: 100%;
  background-color: $color-black-light;
  p {
    font-size: 1.7rem;
    color: $color-grey-light;
    text-align: center;
  }
  .footer-links {
    justify-content: center;
    display: flex;
    flex-direction: row;
    &.soc-links {
      a {
        font-size: 2rem;
      }
    }
    a {
      display: inline-block;
      margin: 0 1rem;
      text-decoration: none;
      color: $color-blue;
      transition: color 0.5s;
      font-size: 1.5rem;
      &:hover {
        color: $color-brown;
      }
    }
  }
}
/************ ##### Media queries for the home page ######*****************/
@media (max-width: 940px) {
  .services-section {
    .services-grid {
      grid-template-columns: repeat(2, 1fr);
    }
  }
}
@media (max-width: 760px) {
  .services-section {
    .services-grid {
      grid-template-columns: repeat(1, 1fr);
    }
  }
  .transX {
    transform: translateY(-5rem);
  }
  .intro-section {
    padding-top: 3rem;
    .img-wrapper {
      display: flex;
      flex-direction: row;
      justify-content: center;
    }

    .about-me {
      margin: 4rem 0;
    }
  }
  .contact-section {
    h1 {
      margin-top: 3rem;
    }
  }
}
@media (max-width: 600px) {
  .home-message {
    width: 90%;
    margin-top: 11rem;
    h1 {
      font-size: 2.2rem;
    }
    h3 {
      font-size: 2.3rem;
    }
    p {
      font-size: 1.5rem;
    }
  }
  .blue-button {
    font-size: 1.2rem;
  }
  .about-me {
    h1 {
      font-size: 3rem;
    }
    p {
      font-size: 1.2rem !important;
    }
  }
  .services-section {
    p {
      font-size: 1.4rem;
    }
  }
  .contact-section {
    .social-links {
      display: grid;
      grid-template-columns: repeat(1, 1fr);
      row-gap: 2rem;
    }
  }
}

